Change default layout for posts to default

--- a/_config.yml
+++ b/_config.yml
@@ -41,4 +41,4 @@ defaults:
   - scope: { path: "" }
     values: { layout: default }
   - scope: { path: "", type: "posts" }
-    values: { layout: post }
+    values: { layout: default }
